--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -39,20 +40,9 @@
 
 <div class="header-filter "
      style="background-image: url({% static  'main/image/blog_post_background.jpg' %});min-height: 120vh;padding-top: 15vh;">
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }} alert-dismissible fade show pt-5 mt-5" role="alert">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% endfor %}
-    {% endif %}
 
 
-
-    <div class="container m-5">
+    <div class="container m-5" style="padding-top: 10vh">
         <div class="row">
             <div class="col" style="margin-left: 20%; margin-right: 20%;">
                 {% block  content %}
