--- a/templates/main/blog/blog_nav.html
+++ b/templates/main/blog/blog_nav.html
@@ -32,18 +32,34 @@
                         <strong>About Us</strong>
                     </a>
                 </li>
-                <li>
-                    <a class="black_font" href="{% url 'single_url:contact' %}#contact">
-                        <strong>Contact Us</strong>
-                    </a>
-                </li>
+                {% if request.user.is_authenticated %}
+                    <li>
+                        <a class="black_font" href="{% url 'account_logout' %}#contact">
+                            <strong>Logout</strong>
+                        </a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a class="black_font" href="{% url 'account_login' %}#contact">
+                            <strong>Login</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="black_font" href="{% url 'account_signup' %}#contact">
+                            <strong>Signup</strong>
+                        </a>
+                    </li>
+                {% endif %}
+
+
             </ul>
+
             <ul class="nav navbar-nav navbar-right">
                 <li>
 
-                        <a class="black_font" href="{{ twitter_url }}" target="_blank">
-                            <i class="fa fa-twitter"></i>
-                        </a>
+                    <a class="black_font" href="{{ twitter_url }}" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
 
                 </li>
                 <li>
@@ -61,6 +77,7 @@
     </div>
     <div class="">
         <div class="container-fluid mt-5 pt-5">
+            {{ messages }}
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert"
