--- a/templates/main/blog/blog_nav.html
+++ b/templates/main/blog/blog_nav.html
@@ -32,6 +32,11 @@
                         <strong>About Us</strong>
                     </a>
                 </li>
+                <li>
+                    <a class="black_font" href="{% url 'single_url:contact' %}#about">
+                        <strong>Contact Us</strong>
+                    </a>
+                </li>
                 {% if request.user.is_authenticated %}
                     <li>
                         <a class="black_font" href="{% url 'account_logout' %}#contact">
@@ -77,12 +82,29 @@
     </div>
     <div class="">
         <div class="container-fluid mt-5 pt-5">
-            {{ messages }}
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert"
                          style="margin-top: 10vh !important;">
                         {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endif %}
+
+            {% if messages %}
+                {% for message in messages %}
+                    <h4>tag{{ message.tags }} ---{{ message }}
+
+                        <div class="alert alert-primary alert-dismissible" role="alert">
+                            This is a primary alert—check it out!
+                        </div>
+                    </h4>
+
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
